--- a/src/style/index.css
+++ b/src/style/index.css
@@ -222,10 +222,19 @@ th {
 
 .logo-image {
   text-align: center;
-  padding: 20px 20px 40px 20px;
+  padding: 60px 20px;
 }
 
 .logo-image img {
   width: 100%;
+}
+
+.register-btn a {
+  color: #fff;
+}
+
+.input-title {
+  font-size: 16px;
+  padding: 15px 0px 9px 15px;
 }
 /*# sourceMappingURL=index.css.map */
