--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,8 +2,20 @@
 
 .logo-image {
   text-align: center;
-  padding: 20px 20px 40px 20px;
+  padding: 60px 20px;
+
   img {
     width: 100%;
   }
+}
+
+.register-btn {
+  a {
+    color: #fff;
+  }
+}
+
+.input-title {
+  font-size: 16px;
+  padding: 15px 0px 9px 15px;
 }
