--- a/src/style/index.css
+++ b/src/style/index.css
@@ -237,4 +237,9 @@ th {
   font-size: 16px;
   padding: 15px 0px 9px 15px;
 }
+
+.avatar {
+  text-align: center;
+  margin: 40px auto;
+}
 /*# sourceMappingURL=index.css.map */
