seperate avatar selector

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -242,4 +242,18 @@ th {
   text-align: center;
   margin: 40px auto;
 }
+
+.pages {
+  margin-bottom: 50px;
+}
+
+.nav-bar {
+  position: fixed;
+  width: 100%;
+  top: 0;
+}
+
+.page-content {
+  margin-top: 40px;
+}
 /*# sourceMappingURL=index.css.map */
