--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -24,3 +24,17 @@
   text-align: center;
   margin: 40px auto;
 }
+
+.pages {
+  margin-bottom: 50px;
+}
+
+.nav-bar {
+  position: fixed;
+  width: 100%;
+  top: 0;
+}
+
+.page-content {
+  margin-top: 40px;
+}
