add lists, message page

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -257,4 +257,10 @@ th {
 .page-content {
   margin-top: 40px;
 }
+
+.tab-bar {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
 /*# sourceMappingURL=index.css.map */
